--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,5 +1,8 @@
+@import-normalize;
+
 body {
   margin: 0;
+  background-color: #000;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -10,4 +13,8 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+* {
+  color: #ffffff
 }
