--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,8 +1,17 @@
 @import-normalize;
 
+:root {
+  --color-primary: #fff;
+  --color-secondary: #fffb00;
+  --color-bg: #000;
+
+  --transition-primary: 0.5s
+}
+
 body {
   margin: 0;
-  background-color: #000;
+  background-color:var(--color-bg);
+  color: var(--color-primary);
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -13,8 +22,4 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-}
-
-* {
-  color: #ffffff
 }
