--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -11,7 +11,7 @@
   position: absolute;
   width: 100%;
   height: 100vh;
-  background-image: url(./bg.jpg);
+  background-image: url(./assets/bg.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   filter: grayscale(1);
