--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,27 +1,28 @@
 @import-normalize;
+@import './fonts.css';
 
 :root {
   --color-primary: #fff;
   --color-secondary: #fffb00;
+  --color-third: #222222;
   --color-bg: #000;
 
   --transition-primary: 0.5s;
 
   --md-screen: 768px;
+  --lg-screen: 1200px;
 }
 
 body {
   margin: 0;
-  background-color:var(--color-bg);
+  background-color: var(--color-bg);
   color: var(--color-primary);
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Monserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
