feat: add Parallax component

--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -1,3 +1,8 @@
+.wrapper {
+  width: 100vw;
+  background-color: var(--color-bg);
+}
+
 .container {
   box-sizing: border-box;
   margin: 40px auto;
