--- a/src/App/App.module.css
+++ b/src/App/App.module.css
@@ -1,5 +1,17 @@
 .header {
+  z-index: 1;
   position: fixed;
   top: 0;
   width: 100%;
+}
+
+.bg {
+  z-index: -1;
+  position: absolute;
+  width: 100%;
+  height: 100vh;
+  background-image: url(../components//Home//assets/bg.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  filter: grayscale(1);
 }
