--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -5,7 +5,7 @@
   height: 100vh;
 }
 
-.container::before {
+/* .container::before {
   content: "";
   z-index: -1;
   position: absolute;
@@ -15,8 +15,24 @@
   background-repeat: no-repeat;
   background-size: cover;
   filter: grayscale(1);
-}
+} */
 
 .title {
   color: var(--color-secondary);
+
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
 }
+
+/* .bg {
+  z-index: -1;
+  position: absolute;
+  width: 100%;
+  height: 100vh;
+  background-image: url(./assets/bg.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  filter: grayscale(1);
+} */
