--- a/src/common/Parallax/Parallax.module.css
+++ b/src/common/Parallax/Parallax.module.css
@@ -20,3 +20,16 @@
 .layer--back {
   transform: translateZ(-1px) scale(2);
 }
+
+.container::-webkit-scrollbar {
+  width: 0.2em;
+}
+
+.container::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
+.container::-webkit-scrollbar-thumb {
+  background-color: var(--color-secondary);
+  outline: 1px solid slategrey;
+}
