--- a/src/components/Navigation/Nav.module.css
+++ b/src/components/Navigation/Nav.module.css
@@ -1,6 +1,8 @@
 .navigation {
   position: relative;
   display: flex;
+  margin: 0 auto;
+  width: 99%;
 }
 
 .trigger {
@@ -95,5 +97,9 @@
   .list {
     flex-direction: row;
     justify-content: center;
+  }
+
+  .trigger {
+    margin: 10px 0;
   }
 }
