feat: add cursor parallax

--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -5,7 +5,7 @@
 
 .container {
   box-sizing: border-box;
-  margin: 40px auto;
+  margin: 0 auto;
   padding: 20px;
   width: 100%;
   font-size: 1.4em;
