--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -3,36 +3,13 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
+  background: linear-gradient(#00000000 95%, var(--color-bg) 100%);
 }
-
-/* .container::before {
-  content: "";
-  z-index: -1;
-  position: absolute;
-  width: 100%;
-  height: 100vh;
-  background-image: url(./assets/bg.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  filter: grayscale(1);
-} */
 
 .title {
   color: var(--color-secondary);
-
   position: absolute;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
 }
-
-/* .bg {
-  z-index: -1;
-  position: absolute;
-  width: 100%;
-  height: 100vh;
-  background-image: url(./assets/bg.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  filter: grayscale(1);
-} */
