--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -1,10 +1,66 @@
 .container {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   height: 100vh;
+  background: linear-gradient(#00000000 95%, var(--color-bg) 100%);
+  text-shadow: 1px 1px 1px #ffffff;
+  font-size: 25px;
+  font-weight: 300;
+  color: #000000;
 }
 
 .title {
+  text-align: center;
+  font-size: 1.5em;
+  font-weight: inherit;
+}
+
+.name {
+  text-shadow: 1px 1px 1px #000000;
   color: var(--color-secondary);
+}
+
+.bg {
+  z-index: -1;
+  position: absolute;
+  width: 100%;
+  height: 100vh;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.bg.face {
+  background-image: url(./assets/face.png);
+}
+
+.bg.second {
+  background-image: url(./assets/large-clouds.png);
+}
+
+.bg.third {
+  background-image: url(./assets/medium-clouds.png);
+}
+
+.bg.fourth {
+  background-image: url(./assets/small-clouds.png);
+}
+
+.five {
+  z-index: -1;
+  position: absolute;
+  width: 100%;
+  height: 100vh;
+  background-color:rgb(182, 221, 233);
+}
+
+.sun {
+  content: "";
+  display: block;
+  margin: 10px auto;
+  border-radius: 50%;
+  width: 150px;
+  height: 150px;
+  background-color: rgb(255, 255, 255);
 }
