--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -5,6 +5,7 @@
 .container {
   box-sizing: border-box;
   margin: 0 auto;
+  min-height: 100vh;
   padding: 20px;
   width: 100%;
   font-size: 1.4em;
@@ -13,6 +14,21 @@
 .details {
   margin-bottom: 40px;
   line-height: 1.8;
+}
+
+.description {
+  animation: show 1s ease-out 0s 1 normal forwards;
+}
+
+@keyframes show {
+  from {
+    transform: translateY(10%);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
 }
 
 @media screen and (min-width: 768px) {
