--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -1,4 +1,5 @@
 .wrapper {
+  background-color: var(--color-bg-primary);
   width: 100vw;
 }
 
@@ -9,6 +10,10 @@
   padding: 20px;
   width: 100%;
   font-size: 1.4em;
+}
+
+.title {
+  color: var(--color-bg-secondary);
 }
 
 .details {
