--- a/src/components/Experience/Experience.module.css
+++ b/src/components/Experience/Experience.module.css
@@ -1,10 +1,19 @@
+.wrapper {
+  background-color: var(--color-bg-secondary);
+  width: 100vw;
+}
+
 .container {
   box-sizing: border-box;
   margin: 0 auto;
   min-height: 100vh;
   padding: 20px;
-  width: 100vw;
+  width: 100%;
   font-size: 1.4em;
+}
+
+.title {
+  color: var(--color-bg-primary);
 }
 
 @media screen and (min-width: 768px) {
