--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -4,8 +4,8 @@
 :root {
   --color-primary: #fff;
   --color-secondary: #fffb00;
-  --color-third: #222222;
-  --color-bg: #000;
+  --color-bg-secondary: #222222;
+  --color-bg-primary: #000;
 
   --transition-primary: 0.5s;
 
@@ -15,7 +15,7 @@
 
 body {
   margin: 0;
-  background-color: var(--color-bg);
+  background-color: var(--color-bg-primary);
   color: var(--color-primary);
   font-family: 'Monserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
