--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -52,11 +52,11 @@
   position: absolute;
   width: 100%;
   height: 100vh;
-  background-color:rgb(182, 221, 233);
+  background-color: rgb(182, 221, 233);
 }
 
 .sun {
-  content: "";
+  content: '';
   display: block;
   margin: 10px auto;
   border-radius: 50%;
