--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -4,6 +4,7 @@
 :root {
   --color-primary: #c0c0c0;
   --color-secondary: #fffb00;
+  --color-third: #ffffff;
 
   --color-bg-primary: #131313;
   --color-bg-secondary: #2e2e2e;
