feat: reveal a workplace details by clicking a name

--- a/src/components/Experience/Experience.module.css
+++ b/src/components/Experience/Experience.module.css
@@ -6,72 +6,6 @@
   color: var(--color-bg-primary);
 }
 
-.list {
-  position: relative;
-
-  --split-width: 2px;
-  --split-reveal-width: 30%;
-  --split-height: 50px;
-  --split-reveal-height: 2px;
-}
-
-.list > *:not(:last-child)::after {
-  content: '';
-  display: block;
-  animation: reverse-reveal 1s ease 0s 1 normal forwards;
-}
-
-.list > *:not(:last-child):hover:after {
-  animation-name: reveal;
-}
-
-.list > *:last-child::after {
-  content: '';
-  display: block;
-  transition-duration: inherit;
-  width: var(--split-height);
-  height: var(--split-width);
-  background-color: var(--color-primary-dark);
-}
-
-.list > *:last-child:hover:after {
-  width: var(--split-reveal-width);
-  height: var(--split-reveal-height);
-  background-color: var(--color-secondary);
-}
-
-@keyframes reveal {
-  0% {
-    width: var(--split-width);
-    height: var(--split-height);
-    background-color: var(--color-primary-dark);
-  }
-  30% {
-    width: var(--split-width);
-    height: var(--split-reveal-height);
-    background-color: var(--color-primary-dark);
-  }
-  100% {
-    width: var(--split-reveal-width);
-    height: var(--split-reveal-height);
-    background-color: var(--color-secondary);
-  }
-}
-
-@keyframes reverse-reveal {
-  0% {
-    width: var(--split-reveal-width);
-    height: var(--split-reveal-height);
-    background-color: var(--color-secondary);
-  }
-  70% {
-    width: var(--split-width);
-    height: var(--split-reveal-height);
-    background-color: var(--color-primary-dark);
-  }
-  100% {
-    width: var(--split-width);
-    height: var(--split-height);
-    background-color: var(--color-primary-dark);
-  }
+.list > * {
+  margin-bottom: 15px;
 }
