--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -5,10 +5,10 @@
   align-items: center;
   height: 100vh;
   background: linear-gradient(#00000000 95%, var(--color-bg-primary) 100%);
-  text-shadow: 1px 1px 1px #ffffff;
+  text-shadow: 1px 1px 1px #000000;
   font-size: 25px;
-  font-weight: 300;
-  color: #000000;
+  font-weight: 400;
+  color: #ffffff;
 }
 
 .title {
@@ -17,50 +17,23 @@
   font-weight: inherit;
 }
 
+.text,
+.title {
+  animation: show 2s ease 0s 1 normal forwards;
+}
+
 .name {
   text-shadow: 1px 1px 1px #000000;
   color: var(--color-secondary);
 }
 
-.bg {
-  z-index: -1;
-  position: absolute;
-  width: 100%;
-  height: 100vh;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-.bg.face {
-  background-image: url(./assets/face.png);
-}
-
-.bg.second {
-  background-image: url(./assets/large-clouds.png);
-}
-
-.bg.third {
-  background-image: url(./assets/medium-clouds.png);
-}
-
-.bg.fourth {
-  background-image: url(./assets/small-clouds.png);
-}
-
-.five {
-  z-index: -1;
-  position: absolute;
-  width: 100%;
-  height: 100vh;
-  background-color: rgb(182, 221, 233);
-}
-
-.sun {
-  content: '';
-  display: block;
-  margin: 10px auto;
-  border-radius: 50%;
-  width: 150px;
-  height: 150px;
-  background-color: rgb(255, 255, 255);
+@keyframes show {
+  from {
+    transform: translateY(60%);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
 }
