--- a/src/components/Navigation/Nav.module.css
+++ b/src/components/Navigation/Nav.module.css
@@ -4,6 +4,7 @@
   margin: 0 auto;
   width: 99%;
   text-shadow: 1px 1px 1px #000000;
+  color: #ffffff;
 }
 
 .trigger {
@@ -13,7 +14,7 @@
   transition-duration: var(--transition-primary);
   cursor: pointer;
   margin: 10px;
-  border: 2px solid var(--color-primary);
+  border: 2px solid #ffffff;
   border-radius: 50%;
   box-shadow: 0px 0px 1px 0px #000000;
   width: 35px;
