refactor: Section component

--- a/src/App/App.module.css
+++ b/src/App/App.module.css
@@ -5,6 +5,19 @@
   width: 100%;
 }
 
+.home {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background: linear-gradient(#00000000 95%, var(--color-bg-primary) 100%);
+  text-shadow: 1px 1px 1px #000000;
+  font-size: 25px;
+  font-weight: 400;
+  color: #ffffff;
+}
+
 .about,
 .skills {
   background-color: var(--color-bg-primary);
