--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -1,4 +1,4 @@
-.container {
+/* .container {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -9,7 +9,7 @@
   font-size: 25px;
   font-weight: 400;
   color: #ffffff;
-}
+} */
 
 .title {
   text-align: center;
