--- a/src/common/Section/Section.module.css
+++ b/src/common/Section/Section.module.css
@@ -2,14 +2,13 @@
   box-sizing: border-box;
   margin: 0 auto;
   min-height: 100vh;
-  padding: 20px;
+  padding: 40px 20px;
   width: 100%;
   font-size: 1.2em;
 }
 
 @media screen and (min-width: 768px) {
   .container {
-    padding: 10px;
     width: 70%;
     max-width: 1600px;
     font-size: 1.5em;
