--- a/src/components/Skills/Secondary/Secondary.module.css
+++ b/src/components/Skills/Secondary/Secondary.module.css
@@ -18,7 +18,7 @@
 .table {
   padding: 20px;
   width: 100%;
-  font-size: 0.9em;
+  font-size: 0.75em;
 }
 
 .show {
@@ -52,3 +52,10 @@
     height: 0;
   }
 }
+
+@media screen and (min-width: 768px) {
+  .table {
+    font-size: 0.9em;
+  }
+}
+
