--- a/src/components/Experience/Workplace/Workplace.module.css
+++ b/src/components/Experience/Workplace/Workplace.module.css
@@ -60,6 +60,14 @@
   margin-bottom: 10px;
 }
 
+.link {
+  transition-duration: var(--transition-primary);
+}
+
+.link:hover {
+  color: var(--color-secondary);
+}
+
 .description {
   padding: 10px;
 }
